Replaced the heading tag with new text. Added an unordered list.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Lesson 5 Mini Activity </title>
   </head>
   <body>
-    <h1>My Own User</h1>
+    <h1> Thoughts and ideas to improve something at my school or in my community.</h1>
   </body>
 </html>
