Added an h2 tag in Codespaces

--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
   </head>
   <body>
     <h1> Thoughts and ideas to improve something at my school or in my community.</h1>
+    <h2>This heading was added with the codespace environment. Codespaces are cloud based and make editing 
+      easier</h2>
+    </h2>
   </body>
 </html>
